--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,19 @@
   <title>A React Landing Page Template</title>
   <meta name="description" content="" />
   <meta name="author" content="@Issaafalkattan" />
+
+  <script> 
+    window.ssp_config = {
+      selector: "ordway_ssp",
+      frameWidth: "100%",
+      frameHeight: "800px",
+      user_token: "eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjo1LCJjb21wYW55X2lkIjoxLCJleHAiOjE3MTQ4NzgwNjd9.",
+      user_email: ""
+  }; 
+  </script>
+  <script src="https://selfservice-portal.ordwaylabs.com/assets/embed.js" defer></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
